# deeppack

./: .clang-format  .clang-tidy  .copier-answers.yml  .editorconfig  .git-blame-ignore-revs  .gitignore  CMakeLists.txt  CMakePresets.json  README.rst  index.html  sources.cmake  vcpkg-configuration.json  vcpkg.json
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cpp-ci.yml  gh-pages.yml
data/test-samples/: arrays.yaml  blobs.yaml  maps.yaml  text.yaml
docs/: Pipfile  conf.py  index.rst  requirements.txt
docs/modules/: streams.rst
include/dplx/: dp.hpp
include/dplx/dp/: byte_buffer.hpp  concepts.hpp  customization.hpp  customization.std.hpp  disappointment.hpp  fwd.hpp  indefinite_range.hpp  item_emitter.hpp  item_parser.hpp  layout_descriptor.hpp  memory_buffer.hpp  object_def.hpp  skip_item.hpp  stream.hpp  tag_invoke.hpp  tuple_def.hpp  type_code.hpp  type_encoder.hpp  utils.hpp
include/dplx/dp/decoder/: api.hpp  array_utils.hpp  core.hpp  object_utils.hpp  std_container.hpp  std_string.hpp  tuple_utils.hpp  utils.hpp
include/dplx/dp/detail/: bit.hpp  hash.hpp  item_size.hpp  mp_for_dots.hpp  mp_lite.hpp  parse_item.hpp  perfect_hash.hpp  type_utils.hpp  utils.hpp  workaround.hpp
include/dplx/dp/encoder/: api.hpp  arg_list.hpp  chrono.hpp  core.hpp  narrow_strings.hpp  object_utils.hpp  std_path.hpp  tuple_utils.hpp
include/dplx/dp/streams/: chunked_input_stream.hpp  chunked_output_stream.hpp  memory_input_stream.hpp  memory_output_stream.hpp
master/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
master/.doctrees/: environment.pickle  index.doctree
master/.doctrees/modules/: streams.doctree
master/_sources/: index.rst.txt
master/_static/: documentation_options.js
master/modules/: streams.html
src/: cpp.hint  disappointment.cpp
src/dp_tests/: blob_matcher.hpp  boost-test.hpp  core_samples.hpp  encoder.test_utils.hpp  hex_decode.hpp  item_sample_ct.hpp  item_sample_rt.hpp  simple_encodable.hpp  test_input_stream.hpp  test_output_stream.hpp  test_utils.hpp  yaml_sample_generator.hpp
src/dp_tests-ng/: blob_matcher.hpp  core_samples.hpp  item_sample.hpp  item_sample_ct.hpp  item_sample_rt.hpp  range_generator.hpp  simple_encodable.hpp  test_input_stream.hpp  test_output_stream.hpp  test_utils.hpp  yaml_sample_generator.hpp
src/dplx/: dp.cpp  dp.hpp  dp.test.cpp
src/dplx/dp/: api.hpp  api.test.cpp  concepts.hpp  concepts.test.cpp  config.hpp  config.test.cpp  core.cpp  core.hpp  core.test.cpp  customization.hpp  customization.std.hpp  customization.std.test.cpp  customization.test.cpp  disappointment.cpp  disappointment.hpp  disappointment.test.cpp  fwd.hpp  fwd.test.cpp  indefinite_range.hpp  indefinite_range.test.cpp  item_emitter.hpp  item_emitter.test.cpp  item_parser.hpp  item_parser.test.cpp  items.hpp  items.test.cpp  layout_descriptor.hpp  layout_descriptor.test.cpp  macros.hpp  macros.test.cpp  map_pair.hpp  map_pair.test.cpp  memory_buffer.hpp  memory_buffer.test.cpp  object_def.hpp  object_def.test.cpp  skip_item.hpp  skip_item.test.cpp  state.hpp  state.test.cpp  (+18 more)
src/dplx/dp/codecs/: auto_enum.hpp  auto_enum.test.cpp  auto_object.hpp  auto_object.test.cpp  auto_tuple.hpp  auto_tuple.test.cpp  core.cpp  core.hpp  core.test.cpp  fixed_u8string.cpp  fixed_u8string.hpp  fixed_u8string.test.cpp  std-chrono.cpp  std-chrono.hpp  std-chrono.test.cpp  std-container.hpp  std-container.test.cpp  std-filesystem.cpp  std-filesystem.hpp  std-filesystem.test.cpp  std-string.cpp  std-string.hpp  std-string.test.cpp  std-tuple.hpp  std-tuple.test.cpp  system_error2.cpp  system_error2.hpp  system_error2.test.cpp  tuple.hpp  tuple.test.cpp  uuid.cpp  uuid.hpp  uuid.test.cpp
src/dplx/dp/cpos/: container.hpp  container.std.hpp  container.std.test.cpp  container.test.cpp  property_id_hash.hpp  property_id_hash.test.cpp  stream.hpp  stream.test.cpp
src/dplx/dp/decoder/: api.hpp  api.test.cpp  chrono.hpp  chrono.test.cpp  core.hpp  core.test.cpp  object_utils.hpp  object_utils.test.cpp  std_container.hpp  std_container.test.cpp  std_path.hpp  std_path.test.cpp  std_string.test.cpp  tuple_utils.hpp  tuple_utils.test.cpp  utils.hpp  utils.test.cpp
src/dplx/dp/detail/: bit.hpp  bit.test.cpp  hash.hpp  hash.test.cpp  item_size.hpp  item_size.test.cpp  mp_for_dots.hpp  mp_for_dots.test.cpp  parse_item.hpp  parse_item.test.cpp  perfect_hash.hpp  perfect_hash.test.cpp  type_utils.hpp  type_utils.test.cpp  (+4 more)
tests/: boost-test.hpp  chunked_input_stream.test.cpp  chunked_output_stream.test.cpp  decoder.object_utils.test.cpp  decoder.std_container.test.cpp  decoder.std_string.test.cpp  decoder.test.cpp  decoder.tuple_utils.test.cpp  deeppack-tests.main.cpp  encoder.blob.test.cpp  encoder.chrono.test.cpp  encoder.map.test.cpp  encoder.object_utils.test.cpp  encoder.range.test.cpp  encoder.string.test.cpp  encoder.test.cpp  encoder.test_utils.hpp  encoder.tuple.test.cpp  encoder.tuple_utils.test.cpp  enum_codec.test.cpp  item_emitter.integer.test.cpp  item_emitter.test.cpp  item_parser.array.test.cpp  item_parser.binary.test.cpp  item_parser.expect.test.cpp  item_parser.integer.test.cpp  item_parser.test.cpp  memory_input_stream.test.cpp  memory_output_stream.test.cpp  perfect_hash.test.cpp  test_input_stream.hpp  test_output_stream.hpp  test_utils.hpp  type_encoder.integer.test.cpp  type_encoder.test.cpp
tools/: config.hpp.in  deeppack-config.cmake  deeppack-config.cmake.in
tools/cmake/: CompilerWarnings.cmake  SourceHelpers.cmake
tools/ports/concrete/: portfile.cmake  vcpkg.json
tools/ports/llfio/: portfile.cmake
tools/ports/ned14-internal-quickcpplib/: sha_manifest.cmake
tools/ports/outcome/: files-do-not-exist.patch  portfile.cmake
tools/ports/status-code/: portfile.cmake
tools/toolchains/: _base.cmake  _clang.cmake  _vcpkg.cmake  arm64-macos-clang-19-brew.cmake  x64-linux-clang-19.cmake  x64-linux-clang.cmake  x64-linux-gcc-14.cmake  x64-linux-gcc.cmake  x64-macos-gcc-15.cmake
tools/triplets/: x64-linux-gcc-14.cmake  x64-macos-gcc-15.cmake
(+75 files in other folders)
